//types not yet tested:
//PROTOBUF_C_TYPE_ENUM,
//PROTOBUF_C_TYPE_BYTES,

package prof;

message return_value
{
    required int32 field_1 = 1;
}

message message_all
{
    optional int8 field_1 = 1;
    optional uint8 field_2 = 2;
    optional int16 field_3 = 3;
    optional uint16 field_4 = 4;
    optional int32 field_5 = 5;
    optional sint32 field_6 = 6;
    optional sfixed32 field_7 = 7;
    optional uint32 field_8 = 8;
    optional fixed32 field_9 = 9;
    optional int64 field_10 = 10;
    optional sint64 field_11 = 11;
    optional sfixed64 field_12 = 12;
    optional uint64 field_13 = 13;
    optional fixed64 field_14 = 14;
    optional float field_15 = 15;
    optional double field_16 = 16;
    optional bool field_17 = 17;
    optional string field_18 = 18;
}

message message_repeated
{
    repeated int8 field_1 = 1;
    repeated uint8 field_2 = 2;
    repeated int16 field_3 = 3;
    repeated uint16 field_4 = 4;
    repeated int32 field_5 = 5;
    repeated sint32 field_6 = 6;
    repeated sfixed32 field_7 = 7;
    repeated uint32 field_8 = 8;
    repeated fixed32 field_9 = 9;
    repeated int64 field_10 = 10;
    repeated sint64 field_11 = 11;
    repeated sfixed64 field_12 = 12;
    repeated uint64 field_13 = 13;
    repeated fixed64 field_14 = 14;
    repeated float field_15 = 15;
    repeated double field_16 = 16;
    repeated bool field_17 = 17;
    repeated string field_18 = 18;
}

message message_int8_repeated
{
    repeated int8 field_1 = 1;
}

message message_uint8_repeated
{
    repeated uint8 field_1 = 1;
}

message message_int16_repeated
{
    repeated int16 field_1 = 1;
}

message message_uint16_repeated
{
    repeated uint16 field_1 = 1;
}

message message_int32_repeated
{
    repeated int32 field_1 = 1;
}

message message_sint32_repeated
{
    repeated sint32 field_1 = 1;
}

message message_sfixed32_repeated
{
    repeated sfixed32 field_1 = 1;
}

message message_uint32_repeated
{
    repeated uint32 field_1 = 1;
}

message message_fixed32_repeated
{
    repeated fixed32 field_1 = 1;
}

message message_int64_repeated
{
    repeated int64 field_1 = 1;
}

message message_sint64_repeated
{
    repeated sint64 field_1 = 1;
}

message message_sfixed64_repeated
{
    repeated sfixed64 field_1 = 1;
}

message message_uint64_repeated
{
    repeated uint64 field_1 = 1;
}

message message_fixed64_repeated
{
    repeated fixed64 field_1 = 1;
}

message message_float_repeated
{
    repeated float field_1 = 1;
}

message message_double_repeated
{
    repeated double field_1 = 1;
}

message message_bool_repeated
{
    repeated bool field_1 = 1;
}

message message_string_repeated
{
    repeated string field_1 = 1;
}

service test
{
    rpc all (message_all) returns (return_value);
    rpc all_repeated (message_repeated) returns (return_value);

    rpc int8_repeated (message_int8_repeated) returns (return_value);
    rpc uint8_repeated (message_uint8_repeated) returns (return_value);

    rpc int16_repeated (message_int16_repeated) returns (return_value);
    rpc uint16_repeated (message_uint16_repeated) returns (return_value);

    rpc int32_repeated (message_int32_repeated) returns (return_value);
    rpc sint32_repeated (message_sint32_repeated) returns (return_value);
    rpc sfixed32_repeated (message_sfixed32_repeated) returns (return_value);
    rpc uint32_repeated (message_uint32_repeated) returns (return_value);
    rpc fixed32_repeated (message_fixed32_repeated) returns (return_value);

    rpc int64_repeated (message_int64_repeated) returns (return_value);
    rpc sint64_repeated (message_sint64_repeated) returns (return_value);
    rpc sfixed64_repeated (message_sfixed64_repeated) returns (return_value);
    rpc uint64_repeated (message_uint64_repeated) returns (return_value);
    rpc fixed64_repeated (message_fixed64_repeated) returns (return_value);

    rpc float_repeated (message_float_repeated) returns (return_value);
    rpc double_repeated (message_double_repeated) returns (return_value);
    rpc bool_repeated (message_bool_repeated) returns (return_value);
    rpc string_repeated (message_string_repeated) returns (return_value);
}
